crates/core-executor/src/tests/sql/functions/snapshots/unimplemented/query_unimplemented_conversion_function.snap
---
source: crates/core-executor/src/tests/sql/functions/unimplemented.rs
description: "\"SELECT TO_OBJECT(123)\""
---
Err(
    "Error: DataFusion error: This feature is not implemented: Function 'to_object' is not implemented yet. Details: https://docs.snowflake.com/en/sql-reference/functions/to_object",
)
